# physarum

./: CMakeLists.txt  README.md
libs/: libs.cmake
libs/glad/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
